tests-trybuild/tests/riscv-rt/entry/fail_public.rs
#[riscv_rt::entry]
pub fn entry_point() -> ! {}

fn main() {}
